[WEB-465]: Remove no longer needed z-index

--- a/src/style/variables/_z-index.scss
+++ b/src/style/variables/_z-index.scss
@@ -1,4 +1,3 @@
 $tabbar-z-index: 20;
 $topbar-z-index: 100;
 $filters-bar-z-index: 101;
-$filter-content-z-index: 102;
